# python-uv-pytest-confest

./: main.py  pyproject.toml
src/: fruit.py  level0.py  level1.py  level2.py  raises.py
tests/: conftest.py  test_assert1.py  test_example.py  test_main.py
